# spotify_app

./: .gitignore  CMakeLists.txt  README.md  idf_component.yml  partitions.csv  sdkconfig.defaults
components/esp_bsp/: CMakeLists.txt  esp_bsp.c  idf_component.yml
components/esp_bsp/include/: display.h  esp_bsp.h
components/esp_websocket_client/: idf_component.yml
components/json_parser/: CMakeLists.txt
components/spotify_client/: ANALYSIS.md  CMakeLists.txt  Kconfig  certs.pem  handler_callbacks.c  idf_component.yml  parse_objects.c  player_commands.c  player_task.c  spotify_auth.c  spotify_client.c  spotify_utils.c
components/spotify_client/examples/main/: spotify_client_example.c
components/spotify_client/include/: spotify_client.h  spotify_utils.h
components/spotify_client/priv_include/: handler_callbacks.h  parse_objects.h  spotify_client_priv.h
components/spotify_client/src/: handler_callbacks.c  parse_objects.c
components/spotify_client/src/include/: handler_callbacks.h  spotify_client_priv.h
components/wifi_manager/: CMakeLists.txt  README.md  wifi_manager.c
main/: CMakeLists.txt  Kconfig.projbuild  app_globals.h  decode_image.c  decode_jpg.h  device_screen.c  device_screen.h  idf_component.yml  main.c  player_screen.c  player_screen.h  playlist_screen.c  playlist_screen.h  search_screen.c  search_screen.h  spotify_app.c  wifi_screen.c  wifi_screen.h
main/src/: display-old.c  display.c  selection_list.c
main/src/include/: display.h  (+1 more)
main/ui/: CMakeLists.txt  filelist.txt  ui.c  ui.h  ui_events.c  ui_events.h  ui_helpers.c  ui_helpers.h
(+12 files in other folders)
